@@ -1,6 +1,7 @@
 // Low-level functions for atomic operations: Generic version  -*- C++ -*-
 
-// Copyright (C) 1999, 2001, 2002, 2003 Free Software Foundation, Inc.
+// Copyright (C) 1999, 2001, 2002, 2003, 2004, 2005
+// Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -69,55 +70,38 @@ __atomic_add (volatile _Atomic_word* __mem, int __val)
       : "r0");
 }
 
-#else
+#else /* !__SH4A__ */
 
 /* This is generic/atomicity.h */
 
-#include <bits/gthr.h>
+#include <bits/atomicity.h>
+#include <bits/concurrence.h>
 
-#define _GLIBCPP_NEED_GENERIC_MUTEX
-
-typedef int _Atomic_word;
+namespace __gnu_internal
+{
+  __glibcxx_mutex_define_initialized(atomic_mutex);
+} // namespace __gnu_internal
 
 namespace __gnu_cxx
 {
-  extern __gthread_mutex_t _Atomic_add_mutex;
+  _Atomic_word
+  __attribute__ ((__unused__))
+  __exchange_and_add(volatile _Atomic_word* __mem, int __val)
+  {
+    __glibcxx_mutex_lock(__gnu_internal::atomic_mutex);
+    _Atomic_word __result;
+    __result = *__mem;
+    *__mem += __val;
+    __glibcxx_mutex_unlock(__gnu_internal::atomic_mutex);
+    return __result;
+  }
 
-#ifndef __GTHREAD_MUTEX_INIT
-  extern __gthread_once_t _Atomic_add_mutex_once;
-  extern void __gthread_atomic_add_mutex_once();
-#endif
-}
+  void
+  __attribute__ ((__unused__))
+  __atomic_add(volatile _Atomic_word* __mem, int __val)
+  { __exchange_and_add(__mem, __val); }
+} // namespace __gnu_cxx
 
-static inline _Atomic_word
-__attribute__ ((__unused__))
-__exchange_and_add (volatile _Atomic_word* __mem, int __val)
-{
-#ifndef __GTHREAD_MUTEX_INIT
-  __gthread_once (&__gnu_cxx::_Atomic_add_mutex_once,
-                  __gnu_cxx::__gthread_atomic_add_mutex_once);
-#endif
-
-  _Atomic_word __result;
-
-  __gthread_mutex_lock (&__gnu_cxx::_Atomic_add_mutex);
-
-  __result = *__mem;
-  *__mem += __val;
-
-  __gthread_mutex_unlock (&__gnu_cxx::_Atomic_add_mutex);
-  return __result;
-}
-
-
-static inline void
-__attribute__ ((__unused__))
-__atomic_add (volatile _Atomic_word* __mem, int __val)
-{
-  (void) __exchange_and_add (__mem, __val);
-}
-
-
-#endif
+#endif /* !__SH4A__ */
 
 #endif /* atomicity.h */
